--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,9 +8,11 @@ intelliJPlatform = "2.1.0"
 kotlin = "2.1.0"
 kover = "0.8.3"
 qodana = "2024.2.6"
+jackson = "2.18.2"
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
+jacksonYaml = { group = "com.fasterxml.jackson.dataformat", name = "jackson-dataformat-yaml", version.ref = "jackson" }
 
 [plugins]
 changelog = { id = "org.jetbrains.changelog", version.ref = "changelog" }
