feat(debug): add debug modal ?

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -14,4 +14,14 @@
                 topic="com.intellij.openapi.vfs.newvfs.BulkFileListener"/>
     </projectListeners>
 
+    <actions>
+        <action
+                id="MonorepoProfiles.ShowDebugState"
+                class="com.github.gplassard.monorepoprofiles.actions.ShowDebugStateAction"
+                text="Show Monorepo Profiles Debug State"
+                description="Show internal plugin state">
+            <add-to-group group-id="ToolsMenu" anchor="last"/>
+        </action>
+    </actions>
+
 </idea-plugin>
